# msys2-devtools

./: .flake8  .gitignore  LICENSE  README.md  msys2-dbadd  msys2-dbremove  msys2-dbremove-api  msys2-dbssh  msys2-dbsync  msys2-lint  msys2-logstats  msys2-logstats-report.sh  msys2-pypi-cache  msys2-repo-buildinfo  msys2-repo-prune  msys2-repo-sigstats  msys2-repo-verify  msys2-sbom  msys2-srcinfo-cache  pyproject.toml  repo-prune.py  sync.py  update-installer
.github/workflows/: test.yml
ansible/: Makefile  hosts  setup.yml
experiments/: shellcheck-pkgbuild
msys2_devtools/: cmd_lint.py  cpe.py  db.py  pkgbuild.py  pkgbuild2json.sh  pkgextra.py  pypi_cache.py  sbom.py  srcinfo.py  srcinfo_cache.py  utils.py
pacman-build/: 0004-change-epoch-sep.patch  Dockerfile
tests/: test_cpe.py  test_db.py  test_main.py  test_sbom.py  test_srcinfo.py  test_utils.py
