[tool.poetry]
name = "msys2-devtools"
version = "0.1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
requests = "^2.28.2"
pydantic = "^2.0"
pyzstd = "^0.17.0"
pgpdump = { version = "^1.5", optional = true }
netaddr = { version = "^1.0.0", optional = true }
fastprogress = { version = "^1.0.3", optional = true }
cyclonedx-python-lib = { version = "^11.0.0", optional = true }
packageurl-python = { version = "^0.17.0", optional = true }
requests-cache = { version = "^1.2.1", optional = true }

[tool.poetry.extras]
sbom = ["cyclonedx-python-lib", "packageurl-python"]
logstats = ["netaddr", "requests-cache"]
sigstats = ["pgpdump", "fastprogress"]
pypi-cache = ["packageurl-python"]
all = ["cyclonedx-python-lib", "packageurl-python", "netaddr", "pgpdump", "fastprogress", "requests-cache"]

[tool.poetry.scripts]
msys2-srcinfo-cache = 'msys2_devtools.srcinfo_cache:run'
msys2-pypi-cache = 'msys2_devtools.pypi_cache:run'
msys2-sbom = 'msys2_devtools.sbom:run'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
