[project]
name = "msys2-devtools"
version = "0.1.0"
description = ""
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
requires-python = ">=3.11.0,<4.0"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "tabulate>=0.9.0,<0.10",
    "requests>=2.28.2,<3",
    "pydantic>=2.0,<3",
    "backports-zstd>=1.2.0,<2.0.0; python_version < '3.14'",
]

[project.optional-dependencies]
sbom = [
    "cyclonedx-python-lib>=11.0.0,<12",
    "packageurl-python>=0.17.0,<0.18",
]
logstats = [
    "netaddr>=1.0.0,<2",
    "requests-cache>=1.2.1,<2",
]
sigstats = [
    "pgpdump>=1.5,<2",
    "fastprogress>=1.0.3,<2",
]
pypi-cache = ["packageurl-python>=0.17.0,<0.18"]
all = [
    "cyclonedx-python-lib>=11.0.0,<12",
    "packageurl-python>=0.17.0,<0.18",
    "netaddr>=1.0.0,<2",
    "pgpdump>=1.5,<2",
    "fastprogress>=1.0.3,<2",
    "requests-cache>=1.2.1,<2",
]

[project.scripts]
msys2-srcinfo-cache = "msys2_devtools.srcinfo_cache:run"
msys2-pypi-cache = "msys2_devtools.pypi_cache:run"
msys2-sbom = "msys2_devtools.sbom:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10",
    "ruff>=0.14.10,<0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 130
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]
